# solution

./: CMakeLists.txt  Cargo.toml  README.md
cpp/: main.cc
cpp/include/: solution.hh  test.hh
cpp/src/: solution.cc  test.cc
cxx/: main.cc
cxx/include/: solution.hh  test.hh
cxx/src/: solution.cc  test.cc
src/: lib.rs  solution.rs
src/cpp/: main.cc
